--- a/qa/requirements.txt
+++ b/qa/requirements.txt
@@ -1,22 +1,18 @@
-Package            Version
------------------- ---------
-annotated-types    0.7.0
-anyio              4.4.0
-certifi            2024.8.30
-charset-normalizer 3.3.2
-click              8.1.7
-exceptiongroup     1.2.2
-fastapi            0.113.0
-h11                0.14.0
-idna               3.8
-pip                22.0.4
-pydantic           2.9.0
-pydantic_core      2.23.2
-requests           2.32.3
-setuptools         58.1.0
-sniffio            1.3.1
-starlette          0.38.4
-typing_extensions  4.12.2
-tzdata             2024.1
-urllib3            2.2.2
-uvicorn            0.30.6
+annotated-types==0.7.0
+anyio==4.4.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+exceptiongroup==1.2.2
+fastapi==0.113.0
+h11==0.14.0
+idna==3.8
+pydantic==2.9.0
+pydantic_core==2.23.2
+requests==2.32.3
+sniffio==1.3.1
+starlette==0.38.4
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+uvicorn==0.30.6
