--- a/qa/src/proxy/Dockerfile
+++ b/qa/src/proxy/Dockerfile
@@ -1,13 +1,26 @@
-# syntax=docker/dockerfile:1.3
+# Используем базовый образ Python 3.9 slim
 FROM python:3.9-slim
 
-# Use the secret during build
+# Устанавливаем git для клонирования репозитория и другие зависимости
+RUN apt-get update && apt-get install -y git
+
+# Используем секрет для передачи токена и клонируем репозиторий
 RUN --mount=type=secret,id=git_token \
-    git clone https://$GIT_TOKEN:x-oauth-basic@github.com/Edipool/chatbot_support_for_X5.git
+    bash -c 'GIT_TOKEN=$(cat /run/secrets/git_token) && git clone https://$GIT_TOKEN:x-oauth-basic@github.com/Edipool/chatbot_support_for_X5.git'
 
-WORKDIR /app
-COPY . .
+# Устанавливаем рабочую директорию внутри контейнера
+WORKDIR /chatbot_support_for_X5/qa
 
-RUN tree
+RUN git checkout qa_baseline
 
+# Копируем зависимости из requirements.txt и устанавливаем их
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Устанавливаем рабочую директорию для запуска скрипта
+WORKDIR /chatbot_support_for_X5/qa/src/baseline
+
+# Expose port 8080 to the outside world
+EXPOSE 8080
+
+# Указываем команду для запуска скрипта
 CMD ["python3", "proxy.py"]
