--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "8080:8080"
     secrets:
       - git_token
-    command: uvicorn baseline:app --host 0.0.0.0 --port 8080
+    command: uvicorn proxy:app --host 0.0.0.0 --port 8080
 
 secrets:
   git_token:
